# EventSyncNew

./: .env.example  .gitignore  AUTOMATED_EMAIL_IMPLEMENTATION.md  CHAT_SYSTEM_IMPLEMENTATION.md  COMPREHENSIVE_FEATURE_SUMMARY.md  DEPLOYMENT_SUCCESS.md  FINAL_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  PLAN.md  PWA_IMPLEMENTATION.md  README.md  SUSTAINABILITY_ASSESSMENT_README.md  WARP.md  XAMPP_SETUP_GUIDE.md  ai_engine.py  analytics.py  analytics_dashboard.py  app.py  assessments.py  calendar_system.py  chat_manager.py  chat_routes.py  collaboration.py  database.py  debug_payment_system.py  email_config_guide.md  email_notifications.py  email_routes.py  forms.py  gamification.py  init_db.py  initialize_sample_data.py  integrate_new_features.py  integration_routes.py  integrations.py  live_test.py  models.py  models_chat.py  (+28 more)
api/: index.py
instance/: event_management.db
model_extensions/: payment.py
netlify/functions/: api.py
route_blueprints/: calendar_routes.py  payment_routes.py
services/: payment_gateway.py  upi_payment_service.py
static/: manifest.json  sw.js
static/css/: attendee.css  modern-ui.css  organizer.css  pwa.css  security-dashboard.css  styles.css  webrtc-calling.css
static/icons/: generate_icons.html
static/js/: analytics-dashboard.js  dashboard.js  events.js  integrations-manager.js  main.js  modern-ui.js  profile.js  pwa.js  security-dashboard.js  tickets.js  (+2 more)
templates/: 404.html  500.html  base.html  index.html  layout.html  login.html  offline.html  pwa_test.html  register.html  webrtc_demo.html
(+35 files in other folders)
